learnt how to do manual backpropagation

--- a/micrograd_from_scratch_yay.ipynb
+++ b/micrograd_from_scratch_yay.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "7e473493",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "41617f06",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "1d82d3e0",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "332f72e8",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
        "-21.999999688659955"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "4410a99c",
    "metadata": {},
    "outputs": [
@@ -138,6 +138,46 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2213313f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Value(data=4)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Value:\n",
+    "    def __init__(self, data, _children=()):\n",
+    "        self.data = data\n",
+    "        self._prev = set(_children)\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return f\"Value(data={self.data})\"\n",
+    "    \n",
+    "    def __add__(self, other):\n",
+    "        out = Value(self.data + other.data, (self.data, other))\n",
+    "        return out\n",
+    "\n",
+    "    def __mul__(self, other):\n",
+    "        out = Value(self.data * other.data,  (self.data, other))\n",
+    "        return out\n",
+    "\n",
+    "a = Value(2)\n",
+    "b = Value(-3)\n",
+    "c = Value(10)\n",
+    "a * b + c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e061be78",
    "metadata": {},
    "outputs": [],
    "source": []
