a useful link to get you started with pytorch

--- a/coursework_fine_tuning_mlp_on_fashion_mnist_to_cifar_10_dataset.ipynb
+++ b/coursework_fine_tuning_mlp_on_fashion_mnist_to_cifar_10_dataset.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyObkcV8Xg2x+0wg2XVCpOrx",
+      "authorship_tag": "ABX9TyMv2q2H90oHwuuFyoBevnlD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1214,6 +1214,15 @@
       ],
       "metadata": {
         "id": "oecI-wzGygdx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This link made me learn alot about [pytorch](https://docs.pytorch.org/tutorials/beginner/pytorch_with_examples.html) actually inspired me how to train a neuron network and prepare the dataset."
+      ],
+      "metadata": {
+        "id": "j2ZODCEd2im1"
       }
     }
   ]
